package mangobomb.bombermango;

public enum BombermanType {
    PLAYER, WALL, BRICK, BOMB, POWERUP_BOMB,
    BG, BALLOOM, DOLL, PORTAL, ONEAL,
    POWERUP_FLAME
}
